Restored to 'fd939a89a8966286395e1341fc9b152952117749'
Replit-Restored-To: fd939a89a8966286395e1341fc9b152952117749

--- a/google-site-verification.html
+++ b/google-site-verification.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Google Search Console Verification</title>
-    <meta name="google-site-verification" content="convertwiz-verification-placeholder">
+    <meta name="google-site-verification" content="YOUR_VERIFICATION_CODE_HERE" />
+    <title>Google Search Console Verification - ConvertWiz</title>
 </head>
 <body>
-    <h1>ConvertWiz - Google Search Console Verification</h1>
-    <p>This page verifies ownership of convertwiz.in for Google Search Console.</p>
+    <h1>Google Search Console Verification</h1>
+    <p>This page verifies convertwiz.in for Google Search Console.</p>
+    <p>ConvertWiz - Professional Multi-Tool Converter Suite</p>
 </body>
 </html>
